[tool.poetry]
name = "volumerize"
package-mode = false

[tool.poetry.dependencies]
apprise = "^1.8.0"
azure-storage-blob = "^12.20.0"
b2sdk = "^2.2.1"
boto = "^2.49.0"
boto3 = "^1.34.105"
boxsdk = {extras = ["jwt"], version = "^3.9.2"}
dropbox = "^11.36.2"
duplicity = "^2.2.3"
fasteners = "^0.19"
gdata-python3 = "^3.0.1"
google-api-python-client = "^2.129.0"
google-auth-oauthlib = "^1.2.0"
jottalib = "^0.5.1"
mediafire = "^0.6.1"
megatools = "^0.0.4"
paramiko = "^3.4.0"
pexpect = "^4.9.0"
psutil = "^5.9.8"
pydrive2 = "^1.19.0"
python = "^3.10"
python-keystoneclient = "^5.4.0"
python-swiftclient = "^4.5.0"

# Incompatible packages
# pyrax

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
