[tool.poetry]
name = "volumerize"
package-mode = false

[tool.poetry.dependencies]
apprise = "^1.9.2"
azure-storage-blob = "^12.24.1"
b2sdk = "^2.8.0"
boto = "^2.49.0"
boto3 = "^1.37.1"
boxsdk = {extras = ["jwt"], version = "^3.13.0"}
dropbox = "^12.0.2"
duplicity = {version = "^3.0.4.0", python = ">=3.10,<3.14"}
fasteners = "^0.19"
gdata-python3 = "^3.0.1"
google-api-python-client = "^2.162.0"
google-auth-oauthlib = "^1.2.1"
jottalib = "^0.5.1"
mediafire = "^0.6.1"
megatools = "^0.0.4"
paramiko = "^3.5.1"
pexpect = "^4.9.0"
psutil = "^7.0.0"
pydrive2 = "^1.21.3"
pyrax = "^1.9.5"
python = "^3.10"
python-keystoneclient = "^5.5.0"
python-novaclient = "^18.8.0"
python-swiftclient = "^4.6.0"


[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
